--- a/css/style.css
+++ b/css/style.css
@@ -481,3 +481,47 @@ height:100%;
 border-radius:5px;
 }
 
+
+
+
+/* ANNOUNCEMENT BAR */
+
+.announcement-bar{
+width:100%;
+background:#140014;
+overflow:hidden;
+white-space:nowrap;
+border-top:2px solid purple;
+border-bottom:2px solid purple;
+}
+
+.announcement-track{
+display:inline-block;
+padding-left:100%;
+animation:scrollLoop 18s linear infinite;
+}
+
+.announcement-track span{
+display:inline-block;
+margin-right:80px;
+color:#e0aaff;
+font-weight:bold;
+font-size:16px;
+}
+
+/* LOOP ANIMATION */
+
+@keyframes scrollLoop{
+
+0%{
+transform:translateX(0);
+}
+
+100%{
+transform:translateX(-100%);
+}
+
+}
+.announcement-bar:hover .announcement-track{
+animation-play-state:paused;
+}
