--- a/frontend/src/components/footer.css
+++ b/frontend/src/components/footer.css
@@ -1,9 +1,164 @@
 .footer {
 
-  background: #4b0082;
+  background: linear-gradient(90deg,#4b0082,#000);
+
+  color: white;
+
+  padding-top: 30px;
+
+}
+
+.footer-container {
+
+  display: flex;
+
+  justify-content: space-between;
+
+  padding: 20px;
+
+  flex-wrap: wrap;
+
+}
+
+/* LEFT */
+
+.footer-left {
+
+  max-width: 400px;
+
+}
+
+.social-icons {
+
+  display: flex;
+
+  gap: 15px;
+
+  margin: 15px 0;
+
+}
+
+/* CIRCLE ICON */
+
+.icon {
+
+  width: 45px;
+
+  height: 45px;
+
+  border-radius: 50%;
+
+  background: white;
+
+  color: black;
+
+  display: flex;
+
+  align-items: center;
+
+  justify-content: center;
+
+  font-size: 20px;
+
+  text-decoration: none;
+
+  transition: 0.3s;
+
+}
+
+/* HOVER COLORS */
+
+.instagram:hover {
+
+  background: #E1306C;
+
+  color: white;
+
+}
+
+.whatsapp:hover {
+
+  background: #25D366;
+
+  color: white;
+
+}
+
+.youtube:hover {
+
+  background: #FF0000;
+
+  color: white;
+
+}
+
+.facebook:hover {
+
+  background: #1877F2;
+
+  color: white;
+
+}
+
+/* CONTACT */
+
+.contact-info p {
+
+  margin: 5px 0;
+
+}
+
+/* RIGHT MAP */
+
+.footer-right {
+
+  width: 400px;
+
+}
+
+.map {
+
+  width: 100%;
+
+  height: 250px;
+
+  border: none;
+
+  border-radius: 10px;
+
+}
+
+/* COPYRIGHT */
+
+.footer-bottom {
+
+  text-align: center;
 
   padding: 15px;
 
-  text-align: center;
+  background: black;
+
+  margin-top: 20px;
+
+}
+
+
+/* MOBILE */
+
+@media(max-width:768px){
+
+  .footer-container {
+
+    flex-direction: column;
+
+    gap: 20px;
+
+  }
+
+  .footer-right {
+
+    width: 100%;
+
+  }
 
 }
